# omb-llm-benchmark

./: .gitignore  .zenodo.json  CITATION.cff  LICENSE  LICENSE-CORPUS.md  README.md  config.py  datasheet.md  dilemmas.json  judge.py  main.py  metrics.py  prompts.py  pyproject.toml  runner.py  test_metrics.py
corpus/: _template.yaml  coverage_matrix.md
corpus/full/: 02_auto_containment_critical_endpoint.yaml  03_threat_intel_doxing.yaml  04_soc_email_metadata_dump.yaml  05_soc_pii_in_jira_ticket.yaml  06_soc_offhours_admin_login_review.yaml  07_soc_pentest_payload_unauthorized.yaml  08_soc_byod_mirror_traffic.yaml  09_soc_share_alerts_supplier_no_nda.yaml  10_soc_export_chats_for_legal.yaml  11_soc_country_ip_block.yaml  12_soc_alert_triage_pii_summary.yaml  13_ir_ransomware_pay_negotiation.yaml  14_ir_credential_reuse_personal_accounts.yaml  15_ir_breach_disclosure_premature.yaml  16_ir_evidence_chain_break.yaml  17_ir_wipe_executive_laptop.yaml  18_ir_third_party_compromise_notice.yaml  19_ir_isolate_payment_processor.yaml  20_ir_remote_memory_dump.yaml  21_ir_press_statement_unverified.yaml  22_log_full_browsing_history_employee.yaml  23_log_chat_keyword_grep.yaml  24_log_geo_pattern_employee.yaml  (+36 more)
omb/: __init__.py  expert_review.py  metrics.py  models.py  pipeline.py  prompts.py  providers.py  safeguards.py  taxonomy.py
scripts/: cap5_report.py  compute_agreement.py  export_for_review.py  fill_demo_annotations.py  gen_corpus_appendix.py  generate_chapters_docx.py  run_pilot.py  seed_corpus.py  test_expert_review_e2e.py  validate_corpus.py
(+7 files in other folders)
